--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,7 @@
   --color-toolbar-background: hsl(var(--toolbar-bg));
   --color-switch-checked-background: hsl(var(--switch-checked-bg));
   --color-live-background: hsl(var(--live-background));
+  --color-panel-text-header: hsl(var(--panel-text-header));
 
   --color-destructive: hsl(var(--destructive));
   --color-destructive-foreground: hsl(var(--destructive-foreground));
@@ -115,6 +116,7 @@
     --toolbar-bg: 250, 32%, 14%;
     --switch-checked-bg: 230, 77%, 76%;
     --live-background: 236, 60%, 53%;
+    --panel-text-header: 230, 76%, 52%, 1;
   }
   .dark {
     --background: 0 0% 3.9%;
