--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
+
 @import 'tailwindcss';
 
 @plugin 'tailwindcss-animate';
@@ -5,6 +7,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
+  --font-source-sans: "Source Sans 3", "sans-serif";
+
   --color-background: hsl(var(--background));
   --color-foreground: hsl(var(--foreground));
 
@@ -164,22 +168,29 @@ h6 {
   @apply text-gray-400 text-xl;
 }
 
-/* Style for webpages */
-
-.banner-container {
-  @apply w-full overflow-hidden;
+@layer components {
+  /* Style for switch button */
+  .switch-btn {
+    @apply w-11 h-6 bg-gray-200 rounded-full
+        peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-(--color-toolbar-background) peer-checked:after:translate-x-full peer-checked:after:border-(--color-toolbar-background) peer-checked:bg-(--color-switch-checked-background)
+        after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-(--color-toolbar-background) after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all
+  }
+  /* Style for webpages */
+  .banner-container {
+    @apply w-full overflow-hidden;
+  }
+  .scroll-content {
+    @apply inline-flex whitespace-nowrap;
+    animation: scroll 20s linear infinite;
+  }
+  .banner-item {
+    @apply flex items-center px-4 py-2 mx-4 rounded-md;
+    /* If you want a fixed width, uncomment the next line */
+    /* min-width: 200px; */
+  }
 }
 
-.scroll-content {
-  @apply inline-flex whitespace-nowrap;
-  animation: scroll 20s linear infinite;
-}
 
-.banner-item {
-  @apply flex items-center px-4 py-2 mx-4 rounded-md;
-  /* If you want a fixed width, uncomment the next line */
-  /* min-width: 200px; */
-}
 
 @keyframes scroll {
   0% {
