--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -157,7 +157,7 @@
     @apply border-border font-source-sans;
   }
   body {
-    @apply bg-background text-foreground text-xs;
+    @apply bg-background text-foreground;
   }
 }
 
@@ -168,6 +168,7 @@ h2 {
 h6 {
   @apply text-gray-400 text-xl;
 }
+
 
 @layer components {
   /* Style for switch button */
