--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,49 +9,34 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-source-sans: "Source Sans 3", "sans-serif";
+  /* FONTS */
+  --font-gabarito: "Gabarito", "sans-serif";
+  --font-epilogue: "Epilogue", "sans-serif";
+  --font-georgia: "Georgia", "serif";
+
+  /* COLORS */
+  --color-primary: #3969AC;
+  --color-primary-dark: #1D3557;
+  --color-primary-light: #81A4D5;
+  --color-primary-lightest: #D5E1F1;
+
+  --color-neutral-primary: #BC79D8;
+  --color-neutral-light: #AFAFAF;
+  --color-neutral-lightest: #FFFFFF;
+
+  --color-feedback-red: #D22D2D;
+  --color-feedback-red-dark: #8B1E1E;
 
   --color-background: hsl(var(--background));
   --color-foreground: hsl(var(--foreground));
 
-  --color-card: hsl(var(--card));
-  --color-card-foreground: hsl(var(--card-foreground));
-
-  --color-popover: hsl(var(--popover));
-  --color-popover-foreground: hsl(var(--popover-foreground));
-
-  --color-primary: hsl(var(--primary));
-  --color-primary-foreground: hsl(var(--primary-foreground));
-
-  --color-secondary: hsl(var(--secondary));
-  --color-secondary-foreground: hsl(var(--secondary-foreground));
-
-  --color-muted: hsl(var(--muted));
-  --color-muted-foreground: hsl(var(--muted-foreground));
-
+  /* INSPECT ITEMS TOOLBAR */
   --color-accent: hsl(var(--accent));
   --color-accent-foreground: hsl(var(--accent-foreground));
   --color-toolbar-background: hsl(var(--toolbar-bg));
   --color-switch-checked-background: hsl(var(--switch-checked-bg));
   --color-live-background: hsl(var(--live-background));
   --color-panel-text-header: hsl(var(--panel-text-header));
-
-  --color-destructive: hsl(var(--destructive));
-  --color-destructive-foreground: hsl(var(--destructive-foreground));
-
-  --color-border: hsl(var(--border));
-  --color-input: hsl(var(--input));
-  --color-ring: hsl(var(--ring));
-
-  --color-chart-1: hsl(var(--chart-1));
-  --color-chart-2: hsl(var(--chart-2));
-  --color-chart-3: hsl(var(--chart-3));
-  --color-chart-4: hsl(var(--chart-4));
-  --color-chart-5: hsl(var(--chart-5));
-
-  --radius-lg: var(--radius);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-sm: calc(var(--radius) - 4px);
 }
 
 /*
@@ -96,81 +81,89 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
     --toolbar-bg: 250, 32%, 14%;
     --switch-checked-bg: 230, 77%, 76%;
     --live-background: 236, 60%, 53%;
     --panel-text-header: 230, 76%, 52%, 1;
   }
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
 }
 
+/* BASE STYLES */
 @layer base {
   * {
-    @apply border-border font-source-sans;
+    @apply font-georgia text-sm leading-[134%] tracking-normal;
   }
   body {
     @apply bg-background text-foreground;
   }
 }
 
+/* TYPOGRAPHY */
 h1 {
-  @apply text-primary text-4xl;
-  line-height: normal;
+  @apply font-gabarito font-semibold text-[40px] leading-[124%] tracking-normal;
 }
-
+h2 {
+  @apply font-gabarito font-semibold text-3xl leading-[124%] tracking-normal;
+}
+h3 {
+  @apply font-gabarito font-semibold text-xl leading-[120%] tracking-normal;
+}
+h4 {
+  @apply font-gabarito font-semibold text-base leading-[120%] tracking-normal;
+}
+h5 {
+  @apply font-gabarito font-semibold text-sm leading-[120%] tracking-normal;
+}
 h6 {
-  @apply text-gray-400 text-xl;
-  line-height: normal;
+  @apply font-gabarito font-semibold text-xs leading-[120%] tracking-normal;
 }
 
+.subhead1 {
+  @apply font-epilogue font-bold text-sm leading-[114%] tracking-[3%];
+}
+.subhead2 {
+  @apply font-epilogue font-bold text-xs leading-[114%] tracking-[3%];
+}
+
+.body-large {
+  @apply font-georgia text-base leading-[144%] tracking-normal;
+}
+.body-medium {
+  @apply font-georgia text-sm leading-[134%] tracking-normal;
+}
+.body-small {
+  @apply font-georgia text-xs leading-[134%] tracking-normal;
+}
+
+.author-medium {
+  @apply font-epilogue text-sm leading-[124%] tracking-[3%];
+}
+.author-small {
+  @apply font-epilogue text-xs leading-[124%] tracking-[3%];
+}
+
+/* ICONS */
+.icon-xl {
+  @apply text-[32px];
+}
+.icon-lg {
+  @apply text-2xl;
+}
+.icon-md {
+  @apply text-base;
+}
+.icon-sm {
+  @apply text-xs;
+}
+.icon-xs {
+  @apply text-[8px];
+}
+
+/* OTHERS */
 figcaption {
   @apply text-gray-600 italic indent-4;
 }
