added theme color neutral light 2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@
   --color-primary-lightest: #D5E1F0;
 
   --color-neutral-primary: #2F2F2F;
+  --color-neutral-light-2: #999999;
   --color-neutral-light: #B0B0B0;
   --color-neutral-lightest: #FFFFFF;
 
