--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,10 +108,10 @@
 h1, h1 p {
   @apply font-gabarito font-semibold text-[40px] leading-[124%] tracking-normal;
 }
-h2, h2 p {
+h2, h2 p, h2 span {
   @apply font-gabarito font-semibold text-3xl leading-[124%] tracking-normal;
 }
-h3, h3 p {
+h3, h3 p, h3 span {
   @apply font-gabarito font-semibold text-xl leading-[120%] tracking-normal;
 }
 h4, h4 p {
